--- a/config-template.json
+++ b/config-template.json
@@ -2,7 +2,8 @@
     "assets": {
         "Arancio": 1,
         "Carta Credito ING": 2,
-        "Paypal": 5
+        "Paypal": 5,
+        "Intesa": 3
     }, 
     "expenses": {
         "Generic": 10
